# mtyping

./: .gitignore  CMakeLists.txt  README.md  highscore  params.yaml
include/duo/: duo.h
include/mtyping/: mtyping.h  sentence.h
lists/sentences/duo/: duobun.txt  section1.txt  section10.txt  section12.txt  section13.txt  section14.txt  section15.txt  section16.txt  section17.txt  section18.txt  section19.txt  section2.txt  section21.txt  section22.txt  section23.txt  section24.txt  section25.txt  section26.txt  section27.txt  section28.txt  section29.txt  section3.txt  section30.txt  section31.txt  section33.txt  section4.txt  section40.txt  section41.txt  section42.txt  section43.txt  section44.txt  section45.txt  section5.txt  section6.txt  section7.txt  section8.txt  section9.txt
lists/words/duo/: duotan.txt  section1.txt  section10.txt  section11.txt  section12.txt  section13.txt  section14.txt  section15.txt  section16.txt  section17.txt  section18.txt  section19.txt  section2.txt  section20.txt  section21.txt  section22.txt  section23.txt  section24.txt  section25.txt  section26.txt  section27.txt  section28.txt  section29.txt  section3.txt  section30.txt  section31.txt  section32.txt  section33.txt  section34.txt  section35.txt  section36.txt  section37.txt  section38.txt  section39.txt  section4.txt  section40.txt  section41.txt  section42.txt  section43.txt  section44.txt  (+6 more)
src/: test.cpp
src/duo/: duo.cpp
src/mtyping/: mtyping.cpp  sentence.cpp
